# C-Lion-Projects

./: README
C-hello world/: main.cpp  main.h
CPU Status/: CMakeLists.txt  Physics.h  main.cpp
CPU Status/Docs/: README
CPU Status/source/: main.cpp
Dinner and a Movie/: CMakeLists.txt  main.cpp  movie.c  readme
Email Reader/: CMakeLists.txt  main.cpp
Fantasy_Baseball/: CMakeLists.txt  Sample input  fantasy_baseball.c  main.cpp
Linux Windows/: CMakeLists.txt  main.cpp
Mastermind/: CMakeLists.txt  mastermind.c
Maximum Stock Return /: CMakeLists.txt  stock.c
Maze/: CMakeLists.txt  Maze.c
Physics/: CMakeLists.txt  main.cpp  physics.h
Prime Numbers/: CMakeLists.txt  main.cpp
Print_Date/: CMakeLists.txt  main.cpp
Simple Calc/: CMakeLists.txt  main.cpp
Sorted_List/: CMakeLists.txt  main.cpp
StarDust/: CMakeLists.txt
StarDust/src/: GTK+_defs.h  main.cpp
Structure of a program/: CMakeLists.txt  main.cpp
Student_Report_Card/: CMakeLists.txt  main.cpp  student.h
Sudokode/: CMakeLists.txt  main.cpp  sudokode.c
WordSearch/: CMakeLists.txt  dictionary.txt  grids.in  hello.txt  psuedocode.txt  wordsearch.c
boogle/: CMakeLists.txt  boogle.c  boogle.txt  dictonary.txt
cake/: CMakeLists.txt  cake.c
checkAVL/: CMakeLists.txt  checkAVL.c  checkAVL.txt
duck/: CMakeLists.txt  duck.c  duck.in
email_reader/: CMakeLists.txt  main.cpp
gameofgames/: CMakeLists.txt  gameofgame.c  read me
genetics/: CMakeLists.txt  basic genetics - handout  genetics.c  sample.txt
hello world/: CMakeLists.txt  main.cpp
recur/: CMakeLists.txt  main.c
riskpowmillon/: CMakeLists.txt  input.txt  riskpowmillion.c  riskpowmillion.ep  riskpowmillion_logic.ep
test345/: CMakeLists.txt  main.c
untitled/: CMakeLists.txt  main.c
